--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 
 name = "wfl"
-version = "0.2.7"
+version = "0.3.0b0"
 requires-python = ">=3.9"
 dependencies = [ "click>=7.0", "numpy", "ase>=3.22.1", "pyyaml", "spglib",
                  "docstring_parser", "expyre-wfl", "universalSOAP" ]
