--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -124,11 +124,11 @@ jobs:
 
       - name: Install MOPAC
         run: |
-          wget https://github.com/openmopac/mopac/releases/download/v22.0.6/mopac-22.0.6-linux.tar.gz
-          tar -xzvf mopac-22.0.6-linux.tar.gz
+          wget http://openmopac.net/mopac-22.1.1-linux.tar.gz
+          tar -xzvf mopac-22.1.1-linux.tar.gz
 
       - name: add mopac to path
-        run: echo $GITHUB_WORKSPACE/mopac-22.0.6-linux/bin >> $GITHUB_PATH
+        run: echo $GITHUB_WORKSPACE/mopac-22.1.1-linux/bin >> $GITHUB_PATH
 
       - name: Install buildcell
         run: |
