--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -180,18 +180,18 @@ jobs:
           echo "which pw.x"
           which pw.x
           ls -l /usr/bin/pw.x
-          export PYTEST_WFL_ASE_ESPRESSO_COMMAND=pw.x
+          espresso_command=pw.x
 
-      - name: set up ASE config file
+      - name: set up ASE config files (same content but in multiple pytest run directories)
         run: |
           export config_file_plain=${HOME}/pytest_plain_config.ini
           echo "[espresso]" > ${config_file_plain}
-          echo "command = ${PYTEST_WFL_ASE_ESPRESSO_COMMAND}" >> ${config_file_plain}
+          echo "command = ${espresso_command}" >> ${config_file_plain}
           echo "pseudo_dir = ${HOME}/pytest_plain" >> ${config_file_plain}
 
           export config_file_cov=${HOME}/pytest_cov_config.ini
           echo "[espresso]" > ${config_file_cov}
-          echo "command = ${PYTEST_WFL_ASE_ESPRESSO_COMMAND}" >> ${config_file_cov}
+          echo "command = ${espresso_command}" >> ${config_file_cov}
           echo "pseudo_dir = ${HOME}/pytest_cov" >> ${config_file_cov}
 
       - name: Lint with flake8
