--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -84,7 +84,7 @@ jobs:
 
             git clone https://github.com/phonopy/phono3py
             cd phono3py
-            phono3py -m pip install -e .
+            python3 -m pip install -e .
             cd ..
 
       - name: Install Quippy from PyPI
