--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -75,12 +75,12 @@ jobs:
 
             git clone https://github.com/phonopy/phonopy
             cd phonopy
-            python3 -m pip install -e .
+            python3 -m pip install -e . -vvv
             cd ..
 
             git clone https://github.com/phonopy/phono3py
             cd phono3py
-            python3 -m pip install -e .
+            python3 -m pip install -e . -vvv
             cd ..
 
       - name: Install Quippy from PyPI
