--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -108,7 +108,7 @@ jobs:
 # dependency from https://docs.github.com/en/actions/using-jobs/using-jobs-in-a-workflow
 
   deploy-docs:
-    if: github.event.pull_request.merged == true 
+    if: github.event.action == 'push'
     needs: build-docs
     runs-on: ubuntu-latest
 
