--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -108,12 +108,15 @@ jobs:
           # search for available torch version with +cpu support
           for torch_version_test in $( python3 -m pip install torch== 2>&1 | fgrep 'from versions' | 
                                        sed -e 's/.*from versions: //' -e 's/)//' -e 's/,[ ]*/\n/g' | tac ); do
+              echo "check torch_version_test $torch_version_test"
               set +e
               python3 -m pip install --dry-run torch==${torch_version_test}+cpu \
-                                     -f https://download.pytorch.org/whl/torch_stable.html > /dev/null 2>&1
+                                     -f https://download.pytorch.org/whl/torch_stable.html 2>&1
               search_stat=$?
+              echo "got search_stat $search_stat"
               set -e
               if [ $search_stat == 0 ]; then
+                  echo "got valid +cpu version, exiting"
                   torch_version=${torch_version_test}
                   break
               fi
