--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Install latest ASE from pypi
         run: |
           echo PIP_CONSTRAINT $PIP_CONSTRAINT
-          python3 -m pip install ase 
+          python3 -m pip install ase
           echo -n "ASE VERSION "
           python3 -c "import ase; print(ase.__file__, ase.__version__)"
 
@@ -105,8 +105,15 @@ jobs:
         run: |
           echo "search for torch version"
           set +o pipefail
+
+          echo "torch versions"
+          python3 -m pip install torch==
+          echo "torch versions to search"
+          python3 -m pip install torch== 2>&1 | fgrep 'from versions' |
+                               sed -e 's/.*from versions: //' -e 's/)//' -e 's/,[ ]*/\n/g' | tac
+
           # search for available torch version with +cpu support
-          for torch_version_test in $( python3 -m pip install torch== 2>&1 | fgrep 'from versions' | 
+          for torch_version_test in $( python3 -m pip install torch== 2>&1 | fgrep 'from versions' |
                                        sed -e 's/.*from versions: //' -e 's/)//' -e 's/,[ ]*/\n/g' | tac ); do
               echo "check torch_version_test $torch_version_test"
               set +e
