--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -113,8 +113,10 @@ jobs:
                                sed -e 's/.*from versions: //' -e 's/)//' -e 's/,[ ]*/\n/g' | tac
 
           # search for available torch version with +cpu support
-          for torch_version_test in $( python3 -m pip install torch== 2>&1 | fgrep 'from versions' |
-                                       sed -e 's/.*from versions: //' -e 's/)//' -e 's/,[ ]*/\n/g' | tac ); do
+          # for torch_version_test in $( python3 -m pip install torch== 2>&1 | fgrep 'from versions' |
+          #                              sed -e 's/.*from versions: //' -e 's/)//' -e 's/,[ ]*/\n/g' | tac ); do
+          wget https://pypi.org/pypi/torch/json -O torch_versions
+          for torch_version_test in $( python3 -c "import json; print(' '.join(json.load(open('torch_versions'))['releases'].keys()))" | sed 's/ /\n/g' | tac ); do
               echo "check torch_version_test $torch_version_test"
               set +e
               python3 -m pip install --dry-run torch==${torch_version_test}+cpu \
