--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 name = "wfl"
 requires-python = ">=3.9"
 dependencies = [ "click>=7.0", "numpy<2", "ase>=3.22.1", "pyyaml", "spglib",
-                 "docstring_parser", "expyre-wfl", "universalSOAP" ]
+                 "docstring_parser", "expyre-wfl", "universalSOAP", "pandas" ]
 readme = "README.md"
 license = { file = "LICENSE" }
 dynamic = ["version"]
@@ -19,3 +19,21 @@ dynamic = ["version"]
 
 [tool.setuptools.dynamic]
 version = {attr  = "wfl.__version__"}
+
+[project.optional-dependencies]
+test = [
+    "pytest",
+    "mace-torch",
+    "quippy-ase",
+    "requests",
+    "rdkit==2024.3.3",
+]
+doc = [
+    "sphinx",
+    "sphinx_click",
+    "nbsphinx",
+    "myst_parser",
+    "sphinx_book_theme",
+]
+all = ["wfl[test,doc]"]
+    
