--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -105,7 +105,7 @@ jobs:
 
   deploy-docs:
     name: Publish documentation
-    if: startsWith(github.ref, "refs/tags/") 
+    if: startsWith(github.ref, 'refs/tags/')
     needs: build-docs
     runs-on: ubuntu-latest
 
