--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -168,8 +168,26 @@ jobs:
 
       - name: Install Quantum Espresso
         run: |
-          sudo apt-get install --no-install-recommends quantum-espresso
-          python3 -c "import numpy; print('numpy version', numpy.__version__)"
+          # sudo apt-get install --no-install-recommends quantum-espresso
+          # python3 -c "import numpy; print('numpy version', numpy.__version__)"
+          sudo apt install --no-install-recommends \
+              autoconf \
+              build-essential \
+              ca-certificates \
+              gfortran \
+              libblas3 \
+              libc6 \
+              libfftw3-dev \
+              libgcc-s1 \
+              liblapack-dev \
+              wget
+
+          cd $HOME
+          wget https://gitlab.com/QEF/q-e/-/archive/qe-7.4.1/q-e-qe-7.4.1.tar.gz
+          tar -zxvf q-e-qe-7.4.1.tar.gz
+          cd q-e-qe-7.4.1
+          ./configure
+          make pw
 
       - name: Install MOPAC
         run: |
@@ -233,10 +251,8 @@ jobs:
 
       - name: Set up pw.x for running in wfl
         run: |
-          echo "which pw.x"
-          which pw.x
-          ls -l /usr/bin/pw.x
-          espresso_command=pw.x
+          ls -l $HOME/q-e-qe-7.4.1/pw.x
+          espresso_command=$HOME/q-e-qe-7.4.1/pw.x
 
           mkdir -p ${HOME}/.config/ase/
           echo "[espresso]" >> ${HOME}/.config/ase/config.ini
